// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`правильно рисует компонент для десктопа 1`] = `
<div
  className="BillingConfirmationSuccess BillingConfirmationSuccess_platform_desktop"
>
  <BillingHeader
    cost={997}
    isMobile={false}
    title="Турбо-продажа"
  />
  <BillingPaymentStatus
    autoProlongableService={
      Object {
        "base_price": 1999,
        "days": 3,
        "service": "package_turbo",
      }
    }
    isMobile={false}
    onAutoBoostButtonClick={[Function]}
    onAutoProlongationButtonClick={[Function]}
    status="PAID"
  />
</div>
`;

exports[`правильно рисует компонент для мобилки 1`] = `
<div
  className="BillingConfirmationSuccess BillingConfirmationSuccess_platform_mobile"
>
  <BillingHeader
    cost={997}
    isMobile={true}
    title="Турбо-продажа"
  />
  <BillingPaymentStatus
    autoProlongableService={
      Object {
        "base_price": 1999,
        "days": 3,
        "service": "package_turbo",
      }
    }
    isMobile={true}
    onAutoBoostButtonClick={[Function]}
    onAutoProlongationButtonClick={[Function]}
    status="PAID"
  />
</div>
`;
